--- a/style.scss
+++ b/style.scss
@@ -121,11 +121,18 @@ $logo: 'JennaSue';
 	   			font-size:2rem;
 	   			color:white;
 	   			font-weight:300;
-	   			-webkit-transform:scale (1,1);
+	   			-webkit-transform: scale(1,1);
+	   			transform: scale(1,1);
 	   			transition:all 1s linear;
 	   		}
 	   			a:hover { color:#2ed77a;
-	   					  -webkit-transform:scale (4,4)
+	   					  -webkit-transform: scale(1.2,1.2);
+	   					  transform: scale(1.2,1.2);
+	   			 }
+	   			 a:active {
+	   			 	color:#2ed77a;
+	   				 -webkit-transform: scale(1.2,1.2);
+	   				 transform: scale(1.2,1.2);
 	   			 }
 	    }
 	}
@@ -170,6 +177,7 @@ ul.social {
 		}	
 		a:hover {
 			color: #27AE60;
+			// background-position: -32px -3px;
 		}
 	}
 
@@ -425,10 +433,10 @@ position:relative;
 	h2 {
 		position:relative;
 		top:45%;
-		left:2%;
+		left:1.5%;
 		letter-spacing: 5px;
 		text-align:center;
-		font-size:3.2rem;
+		font-size:3rem;
 		margin:0;	
 		max-width:200px;
 		color:#1c4226	
@@ -529,11 +537,11 @@ position:relative;
 	// }
 
 #contact {
-background:url(img/cellphone4.png)no-repeat;
+background:url(img/cellphone4.png) fixed no-repeat;
 background-size:cover;
 position:relative;
 z-index:100;
-height:750px;
+height:610px;
 	
 	.contactcontainer {
 		margin:0 auto;
@@ -552,7 +560,7 @@ height:750px;
 			   border: 1px solid grey;
 			   margin: 0 auto;
 			   position:absolute;
-			   top:13%;
+			   top:8%;
 			   left:36%;
 
 
@@ -570,7 +578,7 @@ height:750px;
 }
 
  #post-93 {
- 	padding-top:18%;
+ 	padding-top:15%;
  	padding-right:5%;
  	h3 {
  		color: white;
@@ -580,10 +588,62 @@ height:750px;
  	p {
 		color: white;
  		text-align:center;
- 		font-size:2rem;
+ 		font-size:2.2rem;
  		font-weight:300;
  	}
  }
+
+ ul.contactSocial {
+ 		
+		background-color: rgba(255,255,255,0.2);
+		max-width:370px;
+		margin: 3% auto;
+		border-radius:10px;
+				
+ 		
+			li {
+				display: inline;
+				list-style:none;
+
+
+			
+				i {
+					color:black;
+					padding:4% 14% 4% 4% ;	
+				}
+
+				// i:nth-child(3n+2){
+				// margin-right:5%;
+				// margin-left:5%;
+				// }
+
+		 		i:hover {
+		    		color:#1c8248;
+				}
+		   }  
+}
+
+.email {
+	text-align:center;
+	background-color: rgba(255,255,255,0.2);
+	max-width:100px;
+	margin: 0 auto;
+	border-radius:10px;
+	padding: 1% 0;
+
+	i{
+		color:black;
+	}
+	i:hover {
+		    color:#1c8248;
+	}
+}
+ 
+
+		
+
+
+
 
 	
 	
