--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ body {
   text-align: center;
   line-height: 0.9;
   height: 185px;
-  width: 42%;
+  width: 44%;
   background: #27AE60;
   opacity: 0.8;
   padding: 20px 35px;
@@ -273,7 +273,7 @@ body {
 ul.social {
   position: fixed;
   top: 0;
-  right: 7%;
+  right: 6%;
   min-width: 350px;
 }
 ul.social li {
@@ -326,47 +326,54 @@ ul.social #menu-item-80 a {
 
 /* ABOUT
 -----------------*/
-article.post-50 {
+.aboutcontainer {
   max-width: 1240px;
   margin: 0 auto;
 }
 
+.titlecontainer {
+  float: left;
+  width: 18%;
+  margin: 17% 5% 0 2.5%;
+}
+
 #about {
-  background: url(img/about-background.png) no-repeat;
+  background: url(img/about-background.png) repeat-y;
   background-size: 100%;
-  z-index: 100;
   height: 610px;
 }
 #about h2 {
-  position: relative;
-  top: 45%;
-  left: 3.5%;
   letter-spacing: 5px;
   font-size: 3.8rem;
-  margin: 0;
   color: #1c4226;
-  max-width: 200px;
 }
 
-#post-50 img {
-  width: 20%;
-  height: 80%;
+#post-50 {
   float: left;
-  margin: 8% 5% 5% 22%;
+  width: 100%;
+  margin-top: 7%;
+}
+#post-50 img {
+  width: 30%;
+  height: auto;
+  float: left;
+  margin-right: 5%;
   border: 1px solid grey;
 }
-#post-50 .content {
+
+.content {
+  width: 65%;
   padding-top: 7%;
   display: block;
+  float: left;
 }
-#post-50 .content p {
+.content p {
   font-size: 1.4rem;
-  margin: 1% 10% 0 0;
   line-height: 1.4;
   color: #112c1c;
   font-weight: 300;
 }
-#post-50 .content h3 {
+.content h3 {
   font-size: 1.5rem;
   font-weight: 500;
   color: #112c1c;
@@ -482,7 +489,7 @@ article.post-50 {
 }
 #portfolio h2 {
   position: relative;
-  top: 45%;
+  top: 43%;
   left: 1.5%;
   letter-spacing: 5px;
   text-align: center;
@@ -493,15 +500,16 @@ article.post-50 {
 }
 
 .portfoliocontainer {
-  max-width: 1000px;
-  margin-left: 24%;
+  max-width: 950px;
+  margin-left: 22%;
 }
 .portfoliocontainer .thumbnails {
   width: 30%;
+  height: auto;
   float: left;
   margin-top: 17%;
-  border: 1px solid #0c371f;
-  border-radius: 5px;
+  border: 2px solid #bda64c;
+  border-radius: 6px;
 }
 .portfoliocontainer .thumbnails .projects {
   position: relative;
@@ -525,20 +533,23 @@ article.post-50 {
   padding-top: 8%;
   letter-spacing: 3px;
   text-align: center;
-  font-size: 2rem;
-  margin: 0;
+  font-size: 1.2rem;
+  margin: 0 auto;
   -webkit-transform: scale(0, 0);
   color: black;
   transition: all 1s linear;
   opacity: 0;
+  max-width: 200px;
 }
 .portfoliocontainer .thumbnails .projects .mask p {
   -webkit-transform: scale(0, 0);
   color: black;
   transition: all 1s linear;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-align: center;
   opacity: 0;
+  margin: 0 auto;
+  max-width: 200px;
 }
 .portfoliocontainer .thumbnails .projects:hover img {
   -webkit-transform: scale(6, 6);
@@ -547,9 +558,17 @@ article.post-50 {
 .portfoliocontainer .thumbnails .projects:hover .mask {
   opacity: 1;
 }
-.portfoliocontainer .thumbnails .projects:hover h3, .portfoliocontainer .thumbnails .projects:hover p {
-  -webkit-transform: scale(1.5, 1.5);
+.portfoliocontainer .thumbnails .projects:hover h3 {
+  -webkit-transform: scale(1.2, 1.2);
   opacity: 1;
+  max-width: 150px;
+  padding-bottom: 25%;
+  letter-spacing: 1px;
+}
+.portfoliocontainer .thumbnails .projects:hover p {
+  -webkit-transform: scale(1.2, 1.2);
+  opacity: 1;
+  max-width: 200px;
 }
 .portfoliocontainer .thumbnails .thumbnailSize {
   width: 100%;
@@ -561,7 +580,7 @@ article.post-50 {
 }
 
 #contact {
-  background: url(img/cellphone4.png) fixed no-repeat;
+  background: url(img/cellphone4.png) no-repeat;
   background-size: cover;
   position: relative;
   z-index: 100;
@@ -639,4 +658,134 @@ ul.contactSocial li i:hover {
 }
 .email i:hover {
   color: #1c8248;
+}
+
+p.copyright {
+  text-align: center;
+  color: white;
+  font-size: 1.4rem;
+  background-color: black;
+  margin: 0;
+  padding: 1% 0;
+}
+
+ /* Responsive
+-----------------*/
+/* Portrait tablet and small desktops */
+@media (max-width: 940px) {
+  .headwrap .headwrapContainer .head {
+    height: 125px;
+    width: 44%;
+  }
+  .headwrap .headwrapContainer .head h1 {
+    font-size: 2.4rem;
+    letter-spacing: 4px;
+    font-weight: 400;
+  }
+  .headwrap .headwrapContainer .head h2 {
+    font-size: 1.5rem;
+    font-weight: 300;
+  }
+
+  ul.social {
+    display: none;
+  }
+
+  .nav ul {
+    text-align: center;
+    padding: 0;
+  }
+  .nav ul li {
+    padding: 1% 4% 1% 1%;
+  }
+}
+/* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+  .headwrap .headwrapContainer .head {
+    height: 115px;
+    width: 45%;
+  }
+  .headwrap .headwrapContainer .head h1 {
+    font-size: 2.4rem;
+    letter-spacing: 4px;
+    font-weight: 400;
+  }
+  .headwrap .headwrapContainer .head h2 {
+    font-size: 1.5rem;
+    font-weight: 300;
+  }
+
+  #about h2 {
+    display: none;
+  }
+}
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .headwrap .headwrapContainer .head {
+    height: 115px;
+    width: 45%;
+  }
+  .headwrap .headwrapContainer .head h1 {
+    display: none;
+  }
+  .headwrap .headwrapContainer .head h2 {
+    display: none;
+  }
+
+  #about {
+    background: url(img/about-background.png) repeat-y -180px 0px;
+  }
+}
+@media (min-width: 480px) and (max-width: 748px) {
+  .headwrap .headwrapContainer .head {
+    height: 80px;
+    width: 45%;
+  }
+  .headwrap .headwrapContainer .head h1 {
+    font-size: 1.7rem;
+    line-height: 2rem;
+    letter-spacing: 4px;
+    font-weight: 400;
+  }
+  .headwrap .headwrapContainer .head h2 {
+    display: none;
+  }
+}
+@media (min-width: 940px) and (max-width: 1140px) {
+  .headwrap .headwrapContainer .head {
+    height: 145px;
+    width: 45%;
+  }
+  .headwrap .headwrapContainer .head h1 {
+    font-size: 3.1rem;
+    letter-spacing: 4px;
+    font-weight: 400;
+  }
+  .headwrap .headwrapContainer .head h2 {
+    font-size: 2rem;
+    font-weight: 300;
+  }
+
+  #about h2 {
+    font-size: 3rem;
+    color: #1c4226;
+  }
+
+  .titlecontainer {
+    float: left;
+    width: 18%;
+    margin: 22% 5% 0 2.5%;
+  }
+}
+@media (min-width: 768px) and (max-width: 940px) {
+  #about h2 {
+    font-size: 2.5rem;
+    color: #1c4226;
+  }
+
+  .titlecontainer {
+    float: left;
+    width: 18%;
+    margin: 25% 5% 0 2.5%;
+  }
 }
