--- a/style.css
+++ b/style.css
@@ -257,12 +257,12 @@ body {
   font-weight: 300;
   -webkit-transform: scale(1, 1);
   transform: scale(1, 1);
-  transition: all 1s linear;
+  transition: all 0.7s linear;
 }
 .nav ul li a:hover {
   color: #2ed77a;
-  -webkit-transform: scale(1.2, 1.2);
-  transform: scale(1.2, 1.2);
+  -webkit-transform: scale(1.1, 1.1);
+  transform: scale(1.1, 1.1);
 }
 .nav ul li a:active {
   color: #2ed77a;
@@ -351,7 +351,7 @@ ul.social #menu-item-80 a {
 #post-50 {
   float: left;
   width: 100%;
-  margin-top: 7%;
+  margin-top: 5%;
 }
 #post-50 img {
   width: 30%;
@@ -377,6 +377,7 @@ ul.social #menu-item-80 a {
   font-size: 1.5rem;
   font-weight: 500;
   color: #112c1c;
+  padding-top: 1%;
 }
 
 .skillscontainer {
@@ -700,7 +701,7 @@ p.copyright {
   }
 }
 /* Landscape phone to portrait tablet */
-@media (max-width: 768px) {
+@media (max-width: 770px) {
   .headwrap .headwrapContainer .head {
     height: 115px;
     width: 45%;
@@ -715,8 +716,34 @@ p.copyright {
     font-weight: 300;
   }
 
-  #about h2 {
+  .nav ul li a {
+    font-size: 1.5rem;
+  }
+
+  #about {
+    background: url(img/about-background.png) repeat-y -150px 0px;
+    height: 850px;
+  }
+  #about h2.leftTitle {
     display: none;
+  }
+
+  .content p, .content h3 {
+    clear: both;
+  }
+  .content h3 {
+    padding-top: 10%;
+  }
+  .content h2 {
+    margin: 0;
+    text-align: center;
+    font-size: 2rem;
+    margin-top: 7%;
+  }
+
+  #post-50 img {
+    width: 50%;
+    margin-left: 23%;
   }
 }
 /* Landscape phones and down */
@@ -732,14 +759,28 @@ p.copyright {
     display: none;
   }
 
+  .nav {
+    background-color: rgba(39, 174, 96, 0.9);
+  }
+  .nav ul li a {
+    font-size: 2rem;
+    transition: all 0.9s linear;
+  }
+  .nav ul li a:hover {
+    color: #183d11;
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+
   #about {
     background: url(img/about-background.png) repeat-y -180px 0px;
+    height: 800px;
   }
 }
 @media (min-width: 480px) and (max-width: 748px) {
   .headwrap .headwrapContainer .head {
     height: 80px;
-    width: 45%;
+    width: 50%;
   }
   .headwrap .headwrapContainer .head h1 {
     font-size: 1.7rem;
@@ -777,7 +818,7 @@ p.copyright {
     margin: 22% 5% 0 2.5%;
   }
 }
-@media (min-width: 768px) and (max-width: 940px) {
+@media (min-width: 770px) and (max-width: 940px) {
   #about h2 {
     font-size: 2.5rem;
     color: #1c4226;
@@ -787,5 +828,10 @@ p.copyright {
     float: left;
     width: 18%;
     margin: 25% 5% 0 2.5%;
+  }
+}
+@media (min-width: 768px) and (max-width: 2000px) {
+  .content h2 {
+    display: none;
   }
 }
