--- a/style.scss
+++ b/style.scss
@@ -124,11 +124,11 @@ $logo: 'JennaSue';
 	   			font-weight:300;
 	   			-webkit-transform: scale(1,1);
 	   			transform: scale(1,1);
-	   			transition:all 1s linear;
+	   			transition:all 0.7s linear;
 	   		}
 	   			a:hover { color:#2ed77a;
-	   					  -webkit-transform: scale(1.2,1.2);
-	   					  transform: scale(1.2,1.2);
+	   					  -webkit-transform: scale(1.1,1.1);
+	   					  transform: scale(1.1,1.1);
 	   			 }
 	   			 a:active {
 	   			 	color:#2ed77a;
@@ -274,7 +274,7 @@ height:610px;
 	#post-50 {
 		 float:left;
 		 width:100%; 
-		 margin-top:7%;
+		 margin-top:5%;
 
 		
 		img {
@@ -294,6 +294,7 @@ height:610px;
 				padding-top:7%;
 				display:block;
 				float:left;	
+
 		
 			p {
 				font-size:1.4rem;
@@ -306,6 +307,7 @@ height:610px;
 		 		font-size:1.5rem;
 		 		font-weight:500;
 		 		color:#112c1c;
+		 		padding-top:1%;
 			}
 		}
 
@@ -726,7 +728,7 @@ height:610px;
 
 
 /* Landscape phone to portrait tablet */
-@media (max-width: 768px) {
+@media (max-width: 770px) {
 		.headwrap {
 
 		.headwrapContainer {
@@ -747,13 +749,56 @@ height:610px;
 			}
 		}
 	}
-	#about {
 
-		h2 {
+	.nav{
+		ul{
+			li{
+				a{
+					font-size:1.5rem;
+				}
+			}
+		}
+		
+	}
+	#about {
+			background:url(img/about-background.png) repeat-y -150px 0px;
+			height:850px;
+
+		h2.leftTitle {
 			display:none;
 		}
 	}
 
+	.content {
+		
+
+		p, h3 {
+			clear:both;
+		}
+		h3 { 
+			padding-top:10%;
+
+
+		}
+		h2 {
+			margin:0;
+			text-align:center;
+			font-size:2rem;
+			margin-top:7%;
+		}
+	}
+
+	#post-50 {
+			
+		img {
+				width:50%;
+				margin-left:23%;
+				
+			}
+	}
+	
+	
+	
 	
 }
 
@@ -781,9 +826,28 @@ height:610px;
 		}
 	}
 
+	.nav{
+		background-color:rgba(39,174,96,0.9);
+		ul{
+			li{
+				a{
+					font-size:2rem;
+					transition:all 0.9s linear;
+				}
+				a:hover { color:#183d11;
+	   					  -webkit-transform: scale(1,1);
+	   					  transform: scale(1,1);
+	   			 }
+			}
+		}
+		
+	}
 	#about {
 	background:url(img/about-background.png) repeat-y -180px 0px;
+	height:800px;
 	}
+
+
 }
 
 @media (min-width : 480px) and (max-width : 748px){
@@ -796,7 +860,7 @@ height:610px;
 
 			.head {
 				height:80px;
-		   		width:45%;
+		   		width:50%;
 					h1 {
 				       font-size: 1.7rem;
 				       line-height:2rem;
@@ -854,7 +918,7 @@ height:610px;
 		}
 }
 
-@media (min-width : 768px) and (max-width : 940px){
+@media (min-width : 770px) and (max-width : 940px){
 
 #about {
 
@@ -869,6 +933,15 @@ height:610px;
 			width:18%;
 			margin:25% 5% 0 2.5%
 		}
+}
+
+@media (min-width: 768px) and (max-width:2000px){
+
+	.content {
+		h2 {
+			display:none;
+		}
+	}
 }
 
 	
