--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,14 @@ html {
 	font-size: 62.5%;
 }
 
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
+	}
 
 body{
 	//quick hack
@@ -322,12 +330,12 @@ height:610px;
 
 #skills {
 	
-	background:url(img/skills-background1.png) no-repeat;
+	background:url(img/skills-background1.png) repeat-y;
 	background-size:100%;
 	height:610px;
 	// border-top:1px solid #98DBD0;
 	
-	h2 {
+	h2.rightTitle {
 		position:relative;
 		top:45%;
 		left:86%;
@@ -367,8 +375,8 @@ height:610px;
 		    li {
 				list-style: none;
 				// font-family: 'Source Sans Pro', sans-serif;	
-				line-height: 25px;
-				font-size: 15px;
+				line-height: 2.5rem;
+				font-size: 1.5rem;
 			}
 	    }
 }
@@ -397,9 +405,8 @@ height:610px;
 				
 			li {
 			list-style: none;
-			line-height: 25px;
-			font-size: 15px;
-			font-style: light;	
+			line-height: 2.5rem;
+			font-size: 1.5rem;
 			}
 		}
 }
@@ -426,8 +433,8 @@ height:610px;
 					}
 				li { 
 					list-style: none;
-					font-size: 15px;
-					line-height: 25px;
+					font-size: 1.5rem;
+					line-height: 2.5rem;
 					}
 			}
 	}
@@ -797,9 +804,49 @@ height:610px;
 			}
 	}
 	
-	
-	
-	
+	#skills {
+			background:url(img/skills-background1.png) repeat-y -350px 0px;
+			height:1320px;
+
+		h2.rightTitle {
+			display:none;
+		}
+	}
+	.skillsicons {
+		width:90%;
+		h2 {	
+			text-align:center;
+			font-size:4rem;
+			margin: 12% 0 0 0;
+			color:#1c4226;
+		}
+		.front-end{
+			width:94%;
+			img {
+			width:45%;
+			height:auto;	
+			margin: 10px 0 0 10px;
+			} 
+		}
+		.design{
+			width:85%;
+			clear:both;
+			img {
+			width:45%;
+			height:auto;	
+			
+			} 
+		}
+		.writing{
+			width:94%;
+			clear:both;
+			img {
+			width:45%;
+			height:auto;	
+			padding: 10px 0 20px 35px;
+			} 
+		}
+	}
 }
 
 
@@ -847,6 +894,19 @@ height:610px;
 	height:800px;
 	}
 
+	#skills {
+			background:url(img/skills-background1.png) repeat-y -670px 0px;
+			height:1220px;
+	}
+
+	.skillsicons {
+		width:88%;
+		.writing, .design, .front-end {
+			img {
+				width:70%;
+			}
+		}
+	}	
 
 }
 
@@ -916,7 +976,17 @@ height:610px;
 			width:18%;
 			margin:22% 5% 0 2.5%
 		}
+
+	#skills {
+		h2.rightTitle {
+		font-size:3rem;
+		top:42%;
+		}
+	}	
+
 }
+
+
 
 @media (min-width : 770px) and (max-width : 940px){
 
@@ -928,16 +998,39 @@ height:610px;
 		}
 	}
 
+
 	.titlecontainer {
 			float:left;
 			width:18%;
 			margin:25% 5% 0 2.5%
 		}
+
+#skills {
+
+		h2.rightTitle {
+			font-size:2.4em;
+			top:40%;
+		}
+	}
+
+	.skillsicons {
+		ul {
+			li {
+				font-size:1.3rem;
+			}
+		}
+	}
 }
 
 @media (min-width: 768px) and (max-width:2000px){
 
 	.content {
+		h2 {
+			display:none;
+
+		}
+	}
+	.skillsicons {
 		h2 {
 			display:none;
 		}
