--- a/style.scss
+++ b/style.scss
@@ -440,56 +440,79 @@ height:610px;
 	}
 		
 #portfolio {
-background:url(img/portfolio-background.png) no-repeat;
+background:url(img/portfolio-background.png) repeat-y;
 background-size:100%;
 z-index:100;
-height:675px;
+height:875px;
 // border-top: 1px solid #58D08A;
 position:relative;
 
 
-	h2 {
-		position:relative;
-		top:43%;
-		left:1.5%;
+
+	.portfolioSectionContainer {
+		max-width:1240px;
+		margin:0 auto;
+		
+		h2.main {
+			letter-spacing: 5px;
+			font-size:3.8rem;
+			color:#1c4226;
+			text-align:center;
+			margin:0;
+			padding-top:5%;
+		}
+	}
+
+}
+
+.portfolioTitleContainer {
+	width:18%;
+	float:left;
+	margin:20% auto;
+	
+	h2.leftTitle {
 		letter-spacing: 5px;
-		text-align:center;
 		font-size:3rem;
-		margin:0;	
-		max-width:200px;
-		color:#1c4226	
+		color:#1c4226;
 	}
 }
 
 .portfoliocontainer {
 	
-	max-width:950px;
-	margin-left:22%;
-
-
-	// .portfoliothumbs {
-	// width:85%;
-	// float:left;
-	// }
-	.thumbnails {
-		
-		width:30%;
-		height:auto;
-		float:left;
-		margin-top:17%;
-		border:2px solid #bda64c;
-		border-radius:6px;
+	float:left;
+	width: 82%;
+	margin-top:4%;
 
 	
+	.thumbnails {
+		
+		width:35%;
+		height:auto;
+		float:left;
+		margin-top:3%;
+
+		h3 {
+			text-align:center;
+			font-size:2rem;
+			margin:5% 0 2% 0;
+		}
+		p {
+			text-align:center;
+			font-size:1.6rem;
+			margin:0;
+		}
 
 			.projects {
 				position:relative;
 				overflow:hidden;
+			
 
 
 				img {
 					-webkit-transform:scale(1,1);
 					transition: all 1.5s ease-in-out;
+					border:2px solid #bda64c;
+					border-radius:6px;
 				}
 				.mask {
 					background-color:rgba(247,206,122,1);
@@ -501,28 +524,40 @@ position:relative;
 					left:0;
 					opacity:0;
 
-						h3  {
-							padding-top:8%;
-							letter-spacing:3px;
-							text-align:center;
-							font-size:1.2rem;
-							margin:0 auto;
+						img.link {
+							width:40%;
 							-webkit-transform:scale(0,0);
-							color:black;
+							transform:scale(0,0);
 							transition:all 1s linear;
 							opacity:0;
-							max-width:200px;
+							border:0px;
+							
+							
 						}
-						p  {
-							-webkit-transform:scale(0,0);
-							color:black;
-							transition:all 1s linear;
-							font-size:1.2rem;
-							text-align:center;
-							opacity:0;
-							margin:0 auto;
-							max-width:200px;
-						}
+
+						// h3  {
+						// 	padding-top:8%;
+						// 	letter-spacing:3px;
+						// 	text-align:center;
+						// 	font-size:1.2rem;
+						// 	margin:0 auto;
+						// 	-webkit-transform:scale(0,0);
+						// 	color:black;
+						// 	transition:all 1s linear;
+						// 	opacity:1;
+						// 	max-width:200px;
+						// }
+
+						// p  {
+						// 	-webkit-transform:scale(0,0);
+						// 	color:black;
+						// 	transition:all 1s linear;
+						// 	font-size:1.2rem;
+						// 	text-align:center;
+						// 	opacity:0;
+						// 	margin:0 auto;
+						// 	max-width:200px;
+						// }
 
 				}	
 
@@ -533,23 +568,31 @@ position:relative;
 					opacity:0;
 				}
 				.mask{
-					opacity:1;
-				}
-					
-		
-				h3 {
-					-webkit-transform:scale(1.2,1.2);
-					opacity:1;
-					max-width:150px;
-					padding-bottom:25%;
-					letter-spacing:1px;
+					opacity:0.7;
 				}
 
-				p {
+				img.link {
+					transform:scale(1.2,1.2);
 					-webkit-transform:scale(1.2,1.2);
 					opacity:1;
-					max-width:200px;
-				}
+					margin:11% 0 0 28%;
+
+					
+				}	
+		
+				// h3 {
+				// 	-webkit-transform:scale(1.2,1.2);
+				// 	opacity:1;
+				// 	max-width:150px;
+				// 	padding-bottom:25%;
+				// 	letter-spacing:1px;
+				// }
+
+				// p {
+				// 	-webkit-transform:scale(1.2,1.2);
+				// 	opacity:1;
+				// 	max-width:200px;
+				// }
 
 
 			}
@@ -564,9 +607,13 @@ position:relative;
 			}
 				
 	}	
-		.thumbnails:nth-child(3n+2){
-			margin-right:5%;
-			margin-left:5%;
+		.thumbnails:nth-child(2n+1){
+			margin-right:8%;
+			margin-left:11%;
+		}
+		.thumbnails:nth-child(n+3){
+			margin-top:5%;
+			
 		}
 }
 
@@ -727,6 +774,16 @@ height:610px;
 		}
 	}
 
+	.portfolioTitleContainer {
+		margin:30% 0 0 0;
+		h2.leftTitle {
+		letter-spacing: 5px;
+		font-size:1.8rem;
+		color:#1c4226;
+		margin-left:5%;
+		}
+	}
+
 
 }
 
@@ -847,7 +904,14 @@ height:610px;
 			} 
 		}
 	}
+	.portfolioTitleContainer {
+		margin:30% 0 0 0;
+		h2.leftTitle {
+		display:none;
+		}
+	}
 }
+
 
 
 
@@ -983,6 +1047,16 @@ height:610px;
 		top:42%;
 		}
 	}	
+	
+	.portfolioTitleContainer {
+		margin:28% 0 0 0;
+		h2.leftTitle {
+		letter-spacing: 5px;
+		font-size:2.2rem;
+		color:#1c4226;
+		margin-left:5%;
+		}
+	}
 
 }
 
@@ -1032,6 +1106,12 @@ height:610px;
 	}
 	.skillsicons {
 		h2 {
+			display:none;
+		}
+	}
+	.portfolioSectionContainer {
+		
+		h2.main {
 			display:none;
 		}
 	}
