--- a/style.scss
+++ b/style.scss
@@ -459,7 +459,7 @@ position:relative;
 			color:#1c4226;
 			text-align:center;
 			margin:0;
-			padding-top:5%;
+			padding:10% 0 3% 0;
 		}
 	}
 
@@ -525,7 +525,7 @@ position:relative;
 					opacity:0;
 
 						img.link {
-							width:40%;
+							width:30%;
 							-webkit-transform:scale(0,0);
 							transform:scale(0,0);
 							transition:all 1s linear;
@@ -575,7 +575,7 @@ position:relative;
 					transform:scale(1.2,1.2);
 					-webkit-transform:scale(1.2,1.2);
 					opacity:1;
-					margin:11% 0 0 28%;
+					margin:16% 0 0 33%;
 
 					
 				}	
@@ -630,32 +630,24 @@ height:610px;
 	
 	.contactcontainer {
 		margin:0 auto;
-		max-width:90%;
-		width:1240px;
+		max-width:1240px;
 
 	
 		.tittleWrap {
-			   
-			   height:90px;
-			   width:24%;
-			   // opacity:0.8;
-			   padding: 20px;
-			   color:white;
-			   z-index:-100;
-			   border: 1px solid grey;
-			   margin: 0 auto;
-			   position:absolute;
-			   top:8%;
-			   left:36%;
-
-
+			
+			padding:5% 0 3% 0;
+			
 			h2 {
 				
+				height:90px;
+			  	width:24%;
+			    padding: 20px;
 				letter-spacing: 5px;
 				text-align:center;
 				font-size:3.8rem;
 				margin:0 auto;	
 				color:white;
+			    border: 1px solid #27AE60;
 
 			}
 		}
@@ -663,27 +655,27 @@ height:610px;
 }
 
  #post-93 {
- 	padding-top:15%;
- 	padding-right:5%;
- 	h3 {
- 		color: white;
- 		text-align:center;
- 		font-size:2.4rem;
- 	}
+ 	
+
  	p {
 		color: white;
  		text-align:center;
  		font-size:2.2rem;
  		font-weight:300;
  	}
+ 	p.findMeOnline {
+ 		font-size:1.8rem;
+ 		margin:3% 0 2% 0;
+ 	}
  }
 
  ul.contactSocial {
  		
 		background-color: rgba(255,255,255,0.2);
-		max-width:370px;
-		margin: 3% auto;
+		width:45%;
+		margin: 1% auto;
 		border-radius:10px;
+		text-align:center;
 				
  		
 			li {
@@ -703,15 +695,15 @@ height:610px;
 				// }
 
 		 		i:hover {
-		    		color:#1c8248;
+		    		color:#166a3b;
 				}
-		   }  
+		   } 
 }
 
 .email {
 	text-align:center;
 	background-color: rgba(255,255,255,0.2);
-	max-width:100px;
+	width:10%;
 	margin: 0 auto;
 	border-radius:10px;
 	padding: 1% 0;
@@ -720,7 +712,7 @@ height:610px;
 		color:black;
 	}
 	i:hover {
-		    color:#1c8248;
+		    color:#166a3b;
 	}
 }
  
@@ -904,12 +896,75 @@ height:610px;
 			} 
 		}
 	}
+
+	#portfolio {
+	background:url(img/portfolio-background.png) repeat-y -150px 0px;
+	height:1600px;
+	}
+
+	.portfolioSectionContainer {
+		max-width:770px;
+		margin:0 auto;
+
+	}
+
 	.portfolioTitleContainer {
-		margin:30% 0 0 0;
+		width:14%;
 		h2.leftTitle {
 		display:none;
 		}
+    }
+    
+
+	.portfoliocontainer {
+	
+	float:left;
+	margin: 4% auto;
+	width:86%;
+
+		.thumbnails {
+			
+		width:55%;
+		height:auto;
+		float:left;
+		margin:5% 10% 5% 21%;
+
+			h3 {
+				text-align:center;
+				font-size:2rem;
+				margin:5% 0 2% 0;
+			}
+			p {
+				text-align:center;
+				font-size:1.6rem;
+				margin:0;
+			}
+		}	
+		.thumbnails:nth-child(2n+1){
+			margin:5% 10% 5% 21%;
+		}
+		.thumbnails:nth-child(n+3){
+			// margin:5% 0 5% 22%;
+			
+		}	
 	}
+	ul.contactSocial {
+		
+		width:50%;
+	}
+
+	#contact {
+	 .contactcontainer {
+		.tittleWrap {
+			padding-right:14%;
+			h2 {	
+				color:white;
+			    border: none;
+			}
+		}
+	}
+}
+		
 }
 
 
@@ -940,19 +995,23 @@ height:610px;
 	.nav{
 		background-color:rgba(39,174,96,0.9);
 		ul{
-			li{
-				a{
-					font-size:2rem;
-					transition:all 0.9s linear;
-				}
-				a:hover { color:#183d11;
-	   					  -webkit-transform: scale(1,1);
-	   					  transform: scale(1,1);
-	   			 }
+			.menu-item-91{
+				display:none;
 			}
+			li{
+				
+					a{
+						font-size:1.6rem;
+						transition:all 0.9s linear;
+					}
+					a:hover { color:white;
+		   					  -webkit-transform: none;
+		   					  transform: none;
+		   			}	 
+			 } 
 		}
-		
 	}
+
 	#about {
 	background:url(img/about-background.png) repeat-y -180px 0px;
 	height:800px;
@@ -971,7 +1030,31 @@ height:610px;
 			}
 		}
 	}	
-
+	#portfolio {
+	display:none;
+	}
+	#contact {
+		p{
+			display:none;
+		}
+		ul.contactSocial {
+	 		
+			width:95%;
+			margin-top:10%;
+		}
+		.email {
+		width:25%;
+		margin-top:5%;
+		}
+	}
+	#contact {
+	height:430px;
+	 .contactcontainer {
+		.tittleWrap {
+			padding-right:50%;
+		}
+	 }
+   }
 }
 
 @media (min-width : 480px) and (max-width : 748px){
@@ -1117,7 +1200,20 @@ height:610px;
 	}
 }
 
-	
+@media (min-width: 0px) and (max-width:1100px){
+
+	#contact {
+	 .contactcontainer {
+		.tittleWrap {
+			h2 {	
+				color:white;
+			    border: none;
+			}
+		}
+	}
+}
+		
+}
 	
 
 	
