--- a/style.scss
+++ b/style.scss
@@ -468,7 +468,7 @@ position:relative;
 .portfolioTitleContainer {
 	width:18%;
 	float:left;
-	margin:20% auto;
+	margin:25% 0 0 1%;
 	
 	h2.leftTitle {
 		letter-spacing: 5px;
@@ -480,7 +480,7 @@ position:relative;
 .portfoliocontainer {
 	
 	float:left;
-	width: 82%;
+	width: 81%;
 	margin-top:4%;
 
 	
@@ -703,7 +703,7 @@ height:610px;
 .email {
 	text-align:center;
 	background-color: rgba(255,255,255,0.2);
-	width:10%;
+	width:15%;
 	margin: 0 auto;
 	border-radius:10px;
 	padding: 1% 0;
@@ -948,10 +948,6 @@ height:610px;
 			
 		}	
 	}
-	ul.contactSocial {
-		
-		width:50%;
-	}
 
 	#contact {
 	 .contactcontainer {
@@ -962,8 +958,12 @@ height:610px;
 			    border: none;
 			}
 		}
+	  }
+		ul.contactSocial {
+		
+			width:60%;
+		}	
 	}
-}
 		
 }
 
@@ -978,8 +978,10 @@ height:610px;
 		.headwrapContainer {
 
 			.head {
-				height:115px;
-		   		width:45%;
+				height:120px;
+		   		width:38%;
+		   		background: url(img/logo.png) center no-repeat, #27AE60;
+		   		background-size:68%;
 					h1 {
 				       display:none;
 
