--- a/style.scss
+++ b/style.scss
@@ -73,8 +73,7 @@ $logo: 'JennaSue';
 
 	.headwrapContainer {
 		margin:0 auto;
-		max-width:90%;
-		width:1240px;
+		width:100%;
 		
     
 	    .head {
@@ -239,7 +238,7 @@ ul.social {
 
 	.titlecontainer {
 		float:left;
-		width:18%;
+		width:11.5%;
 		margin:17% 5% 0 2.5%
 	}
 
@@ -247,11 +246,8 @@ ul.social {
 #about {
 background:url(img/about-background.png) repeat-y;
 background-size:100%;
-height:610px;
-
 
 	h2 {
-		
 		letter-spacing: 5px;
 		font-size:3.8rem;
 		color:#1c4226;	
@@ -468,7 +464,7 @@ position:relative;
 .portfolioTitleContainer {
 	width:18%;
 	float:left;
-	margin:25% 0 0 1%;
+	margin:25% 0 0 0;
 	
 	h2.leftTitle {
 		letter-spacing: 5px;
@@ -1016,7 +1012,7 @@ height:610px;
 
 	#about {
 	background:url(img/about-background.png) repeat-y -180px 0px;
-	height:800px;
+	height:850px;
 	}
 
 	#skills {
@@ -1055,6 +1051,10 @@ height:610px;
 		.tittleWrap {
 			padding-right:50%;
 		}
+		i {
+					color:black;
+					padding:4% 10% 4% 4% ;	
+				}
 	 }
    }
 }
