--- a/style.css
+++ b/style.css
@@ -334,154 +334,148 @@ ul.social #menu-item-80 a {
 
 /* ABOUT
 -----------------*/
-.aboutcontainer {
-  max-width: 1240px;
-  margin: 0 auto;
-}
-
-.titlecontainer {
-  float: left;
-  width: 11.5%;
-  margin: 17% 5% 0 2.5%;
-}
-
 #about {
   background: url(img/about-background.png) repeat-y;
   background-size: 100%;
 }
 #about h2 {
+  font-size: 3.7rem;
+  margin: 3% 0 12% 0;
+}
+#about .aboutcontainer {
+  max-width: 1240px;
+  margin: 0 auto;
+}
+#about .titlecontainer {
+  float: left;
+  width: 18%;
+  margin-top: 18%;
+}
+#about .titlecontainer h2.leftTitle {
   letter-spacing: 5px;
   font-size: 3.8rem;
   color: #1c4226;
+  text-align: center;
 }
-
-#post-50 {
-  float: left;
-  width: 100%;
-  margin-top: 5%;
-}
-#post-50 img {
-  width: 30%;
+#about img {
+  width: 33%;
   height: auto;
   float: left;
   margin-right: 5%;
   border: 1px solid grey;
 }
-
-.content {
-  width: 65%;
-  padding-top: 7%;
+#about .content {
+  width: 82%;
+  padding: 9% 11%;
   display: block;
   float: left;
+  margin: auto;
 }
-.content p {
+#about .content p {
   font-size: 1.4rem;
   line-height: 1.4;
   color: #112c1c;
   font-weight: 300;
+  max-width: 830px;
 }
-.content h3 {
+#about .content h3 {
   font-size: 1.5rem;
   font-weight: 500;
   color: #112c1c;
   padding-top: 1%;
 }
 
-.skillscontainer {
-  max-width: 1240px;
-  width: 100%;
-  margin: 0 auto;
-}
-
 #skills {
   background: url(img/skills-background1.png) repeat-y;
   background-size: 100%;
-  height: 610px;
-}
-#skills h2.rightTitle {
   position: relative;
-  top: 45%;
-  left: 86%;
+  z-index: 100;
+}
+#skills .skillscontainer {
+  width: 100%;
+  margin: 0 auto;
+}
+#skills .skillsTitleContainer {
+  float: left;
+  width: 18%;
+  margin-top: 18%;
+}
+#skills .skillsTitleContainer h2.rightTitle {
   letter-spacing: 5px;
   font-size: 3.8rem;
   margin: 0;
   color: #1c4226;
-  max-width: 200px;
-}
-
-.skillsicons {
-  width: 85%;
-  float: left;
-}
-
-.front-end {
-  float: left;
-  width: 27%;
   text-align: center;
-  margin-top: 8%;
 }
-.front-end img {
+#skills .skillsicons {
+  width: 82%;
+  float: left;
+  padding: 10% 0;
+  margin: 0 auto;
+}
+#skills .front-end {
+  float: left;
+  width: 26.5%;
+  margin-left: 7.5%;
+  margin-right: 2%;
+  text-align: center;
+}
+#skills .front-end img {
   width: 90%;
   height: auto;
   padding-bottom: 28px;
   padding-left: 40px;
 }
-.front-end ul {
+#skills .front-end ul {
   text-align: center;
 }
-.front-end ul h3 {
+#skills .front-end ul h3 {
   font-size: 2rem;
 }
-.front-end ul li {
+#skills .front-end ul li {
   list-style: none;
   line-height: 2.5rem;
   font-size: 1.5rem;
 }
-
-.design {
+#skills .design {
   float: left;
-  width: 27%;
+  width: 26.5%;
   text-align: center;
-  margin-left: 5%;
-  margin-top: 8%;
-  margin-right: 2%;
 }
-.design img {
+#skills .design img {
   width: 85%;
   height: auto;
   padding: 10px 0 30px 35px;
 }
-.design ul {
+#skills .design ul {
   text-align: center;
 }
-.design ul h3 {
+#skills .design ul h3 {
   font-size: 2rem;
 }
-.design ul li {
+#skills .design ul li {
   list-style: none;
   line-height: 2.5rem;
   font-size: 1.5rem;
 }
-
-.writing {
+#skills .writing {
   float: left;
-  width: 27%;
+  width: 26.5%;
   text-align: center;
   margin-right: 0;
-  margin-top: 8%;
 }
-.writing img {
+#skills .writing img {
   width: 85%;
   height: auto;
   padding: 2px 0 30px 35px;
 }
-.writing ul {
+#skills .writing ul {
   text-align: center;
 }
-.writing ul h3 {
+#skills .writing ul h3 {
   font-size: 2rem;
 }
-.writing ul li {
+#skills .writing ul li {
   list-style: none;
   font-size: 1.5rem;
   line-height: 2.5rem;
@@ -491,11 +485,9 @@ ul.social #menu-item-80 a {
   background: url(img/portfolio-background.png) repeat-y;
   background-size: 100%;
   z-index: 100;
-  height: 875px;
   position: relative;
 }
 #portfolio .portfolioSectionContainer {
-  max-width: 1240px;
   margin: 0 auto;
 }
 #portfolio .portfolioSectionContainer h2.main {
@@ -510,18 +502,19 @@ ul.social #menu-item-80 a {
 .portfolioTitleContainer {
   width: 18%;
   float: left;
-  margin: 25% 0 0 0;
+  margin: 25% auto;
 }
 .portfolioTitleContainer h2.leftTitle {
   letter-spacing: 5px;
   font-size: 3rem;
   color: #1c4226;
+  text-align: center;
 }
 
 .portfoliocontainer {
   float: left;
   width: 81%;
-  margin-top: 4%;
+  margin: 5% auto 8%;
 }
 .portfoliocontainer .thumbnails {
   width: 35%;
@@ -597,16 +590,16 @@ ul.social #menu-item-80 a {
   background-size: cover;
   position: relative;
   z-index: 100;
-  height: 610px;
 }
 #contact .contactcontainer {
   margin: 0 auto;
-  max-width: 1240px;
+  width: 100%;
+  padding: 1% 0 2.5% 0;
 }
-#contact .contactcontainer .tittleWrap {
+#contact .contactcontainer .contactTittleWrap {
   padding: 5% 0 3% 0;
 }
-#contact .contactcontainer .tittleWrap h2 {
+#contact .contactcontainer .contactTittleWrap h2 {
   height: 90px;
   width: 24%;
   padding: 20px;
@@ -667,12 +660,12 @@ p.copyright {
   text-align: center;
   color: white;
   font-size: 1.4rem;
-  background-color: black;
+  background-color: rgba(39, 174, 96, 0.8);
   margin: 0;
   padding: 1% 0;
 }
 
- /* Responsive
+/* Responsive
 -----------------*/
 /* Portrait tablet and small desktops */
 @media (max-width: 940px) {
@@ -734,121 +727,111 @@ p.copyright {
 
   #about {
     background: url(img/about-background.png) repeat-y -150px 0px;
-    height: 850px;
   }
   #about h2.leftTitle {
     display: none;
   }
 
+  .content img {
+    margin-bottom: 10%;
+  }
   .content p, .content h3 {
     clear: both;
   }
   .content h3 {
     padding-top: 10%;
+    font-size: 1.4rem;
   }
   .content h2 {
     margin: 0;
     text-align: center;
     font-size: 2rem;
-    margin-top: 7%;
+    margin-top: 5%;
   }
 
   #post-50 img {
     width: 50%;
-    margin-left: 23%;
+    margin-left: 22%;
   }
 
   #skills {
     background: url(img/skills-background1.png) repeat-y -350px 0px;
-    height: 1320px;
   }
   #skills h2.rightTitle {
     display: none;
   }
-
-  .skillsicons {
+  #skills .skillsicons {
     width: 90%;
+    padding: 0;
   }
-  .skillsicons h2 {
+  #skills .skillsicons h2 {
     text-align: center;
     font-size: 4rem;
-    margin: 12% 0 0 0;
+    margin: 0 0 0 0;
     color: #1c4226;
+    margin-top: 15%;
   }
-  .skillsicons .front-end {
-    width: 94%;
+  #skills .skillsicons .front-end {
+    width: auto;
+    margin: 7% 0;
   }
-  .skillsicons .front-end img {
-    width: 45%;
-    height: auto;
-    margin: 10px 0 0 10px;
+  #skills .skillsicons .front-end img {
+    width: 50%;
+    margin: 5% 0 0 0;
   }
-  .skillsicons .design {
-    width: 85%;
+  #skills .skillsicons .design {
+    width: auto;
+    margin: 0 0 4% 3%;
     clear: both;
   }
-  .skillsicons .design img {
-    width: 45%;
+  #skills .skillsicons .design img {
+    width: 50%;
     height: auto;
   }
-  .skillsicons .writing {
-    width: 94%;
+  #skills .skillsicons .writing {
+    width: auto;
     clear: both;
   }
-  .skillsicons .writing img {
-    width: 45%;
+  #skills .skillsicons .writing img {
+    width: 50%;
     height: auto;
     padding: 10px 0 20px 35px;
   }
 
   #portfolio {
     background: url(img/portfolio-background.png) repeat-y -150px 0px;
-    height: 1600px;
   }
-
-  .portfolioSectionContainer {
-    max-width: 770px;
-    margin: 0 auto;
+  #portfolio .portfolioSectionContainer h2.main {
+    padding: 10% 7% 3% 0;
   }
-
-  .portfolioTitleContainer {
-    width: 14%;
-  }
-  .portfolioTitleContainer h2.leftTitle {
+  #portfolio h2.leftTitle {
     display: none;
   }
-
-  .portfoliocontainer {
-    float: left;
-    margin: 4% auto;
-    width: 86%;
-  }
-  .portfoliocontainer .thumbnails {
-    width: 55%;
+  #portfolio .thumbnails {
+    width: 51%;
     height: auto;
-    float: left;
-    margin: 5% 10% 5% 21%;
+    margin: 5% 0 5% 20%;
   }
-  .portfoliocontainer .thumbnails h3 {
+  #portfolio .thumbnails h3 {
     text-align: center;
     font-size: 2rem;
     margin: 5% 0 2% 0;
   }
-  .portfoliocontainer .thumbnails p {
+  #portfolio .thumbnails p {
     text-align: center;
     font-size: 1.6rem;
     margin: 0;
   }
-  .portfoliocontainer .thumbnails:nth-child(2n+1) {
-    margin: 5% 10% 5% 21%;
+  #portfolio .thumbnails:nth-child(2n+1) {
+    margin: 5% 0 5% 20%;
+  }
+  #portfolio .thumbnails:nth-child(n+3) {
+    margin: 5% 0 5% 20%;
   }
 
-  #contact .contactcontainer .tittleWrap {
-    padding-right: 14%;
-  }
-  #contact .contactcontainer .tittleWrap h2 {
+  #contact .contactcontainer .contactTittleWrap h2 {
     color: white;
-    border: none;
+    width: 80%;
   }
   #contact ul.contactSocial {
     width: 60%;
@@ -856,17 +839,27 @@ p.copyright {
 }
 /* Landscape phones and down */
 @media (max-width: 480px) {
+  .headwrap {
+    background: white;
+    opacity: 0.95;
+    width: 100%;
+    height: 700px;
+    position: relative;
+  }
   .headwrap .headwrapContainer .head {
-    height: 120px;
-    width: 38%;
-    background: url(img/logo.png) center no-repeat, #27ae60;
-    background-size: 68%;
+    width: 100%;
+    background: white;
+    border: none;
+    top: 40%;
+    left: 0;
   }
   .headwrap .headwrapContainer .head h1 {
-    display: none;
+    color: #145e34;
+    font-size: 2.8rem;
   }
   .headwrap .headwrapContainer .head h2 {
-    display: none;
+    color: #145e34;
+    font-size: 2.2rem;
   }
 
   .nav {
@@ -887,18 +880,20 @@ p.copyright {
 
   #about {
     background: url(img/about-background.png) repeat-y -180px 0px;
-    height: 850px;
   }
 
   #skills {
     background: url(img/skills-background1.png) repeat-y -670px 0px;
-    height: 1220px;
   }
-
-  .skillsicons {
-    width: 88%;
+  #skills .skillsicons {
+    width: 86%;
+    padding: 10% 0;
   }
-  .skillsicons .writing img, .skillsicons .design img, .skillsicons .front-end img {
+  #skills .skillsicons .writing, #skills .skillsicons .design, #skills .skillsicons .front-end {
+    width: 90%;
+    padding-top: 10%;
+  }
+  #skills .skillsicons .writing img, #skills .skillsicons .design img, #skills .skillsicons .front-end img {
     width: 70%;
   }
 
@@ -921,8 +916,8 @@ p.copyright {
   #contact {
     height: 430px;
   }
-  #contact .contactcontainer .tittleWrap {
-    padding-right: 50%;
+  #contact .contactcontainer .contactTittleWrap h2 {
+    width: 80%;
   }
   #contact .contactcontainer i {
     color: black;
@@ -964,12 +959,6 @@ p.copyright {
     color: #1c4226;
   }
 
-  .titlecontainer {
-    float: left;
-    width: 18%;
-    margin: 22% 5% 0 2.5%;
-  }
-
   #skills h2.rightTitle {
     font-size: 3rem;
     top: 42%;
@@ -987,14 +976,8 @@ p.copyright {
 }
 @media (min-width: 770px) and (max-width: 940px) {
   #about h2 {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
     color: #1c4226;
-  }
-
-  .titlecontainer {
-    float: left;
-    width: 18%;
-    margin: 25% 5% 0 2.5%;
   }
 
   #skills h2.rightTitle {
@@ -1020,8 +1003,13 @@ p.copyright {
   }
 }
 @media (min-width: 0px) and (max-width: 1100px) {
-  #contact .contactcontainer .tittleWrap h2 {
+  #contact .contactcontainer .contactTittleWrap h2 {
     color: white;
     border: none;
+  }
+}
+@media (min-width: 1300px) and (max-width: 1900px) {
+  #about .titlecontainer {
+    margin-top: 16%;
   }
 }
